k8s-cluster/applications/grafana/base/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute

metadata:
  name: grafana
  namespace: grafana
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`grafana.zimmermann.sh`)
      priority: 10
      services:
        - kind: Service
          name: grafana
          port: 80
  tls:
    secretName: grafana-tls-cert
